# rexrov2

./: .gitignore  .rexrov2.rosinstall  .travis.yml  README.md
.github/workflows/: create_issue_branch.yml  industrial_ci_action.yml
rexrov2_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
rexrov2_control/config/: TAM.yaml  model_params.yaml  model_params_exact.yaml  pos_pid_control.yaml  thruster_manager.yaml  vel_pid_control.yaml
rexrov2_control/launch/: record_demo.launch  start_mb_fl_controller.launch  start_nmb_sm_controller.launch  start_pd_grav_compensation_controller.launch  start_pid_controller.launch  start_sf_controller.launch  start_thruster_manager.launch  start_velocity_control.launch
rexrov2_control/rviz/: rexrov2_control.rviz
rexrov2_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rexrov2_description/launch/: upload.launch.py  upload_rexrov2.launch  upload_rexrov2_oberon4.launch  upload_rexrov2_oberon7.launch  upload_rexrov2_oberon_arms.launch
rexrov2_description/meshes/: Propeller.dae
rexrov2_description/robots/: rexrov2_default.xacro  rexrov2_oberon4.xacro  rexrov2_oberon7.xacro  rexrov2_oberon_arms.xacro
rexrov2_description/test/: test_urdf_files.py  test_urdf_files.test
rexrov2_description/urdf/: rexrov2_actuators.xacro  rexrov2_base.xacro  rexrov2_sensors.xacro  rexrov2_snippets.xacro
rexrov2_description/xacro/: rexrov2.gazebo.xacro  rexrov2_base.xacro
rexrov2_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
rexrov2_gazebo/launch/: record.launch  start_demo_mb_fl_controller.launch  start_demo_nmb_sm_controller.launch  start_demo_pd_grav_compensation_controller.launch  start_demo_pid_controller.launch  start_demo_sf_controller.launch
