<?xml version="1.0"?>
<package format="2">
  <name>rexrov2_control</name>
  <version>0.1.0</version>
  <description>The rexrov2_control package</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>
  <maintainer email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</maintainer>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>uuv_control_cascaded_pid</depend>
  <depend>uuv_thruster_manager</depend>
  <depend>uuv_trajectory_control</depend>
</package>
