<?xml version="1.0"?>
<package format="2">
  <name>rexrov2_control</name>
  <version>0.1.3</version>
  <description>Launch and configuration files to start controllers nodes from the [`uuv_trajectory_control`](https://github.com/uuvsimulator/uuv_simulator/tree/master/uuv_control/uuv_trajectory_control) package for the RexROV 2 vehicle.</description>

  <maintainer email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>
  <maintainer email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</maintainer>

  <author email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>uuv_control_cascaded_pid</exec_depend>
  <exec_depend>uuv_thruster_manager</exec_depend>
  <exec_depend>uuv_trajectory_control</exec_depend>
</package>
