<?xml version="1.0"?>
<package format="2">
  <name>rexrov2_description</name>
  <version>0.1.0</version>
  <description>The robot description files for the RexROV 2 underwater vehicle</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>
  <maintainer email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</maintainer>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>message_to_tf</depend>
  <depend>uuv_sensor_ros_plugins</depend>
  <depend>uuv_gazebo_ros_plugins</depend>
  <depend>oberon4_description</depend>
  <depend>oberon7_description</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  
</package>
