<?xml version="1.0"?>
<package format="2">
  <name>rexrov2_description</name>
  <version>0.1.3</version>
  <description>The robot description files for the RexROV 2 underwater vehicle and launch files to spawn the model in different configurations.</description>

  <maintainer email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>
  <maintainer email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</maintainer>

  <author email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>uuv_assistants</exec_depend>
  <exec_depend>uuv_sensor_ros_plugins</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins</exec_depend>
  <exec_depend>uuv_descriptions</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>rosunit</test_depend>

</package>
