<?xml version="1.0"?>
<package>
  <name>rexrov2_gazebo</name>
  <version>0.1.1</version>
  <description>Package with launch files for demonstrations with the RexROV 2 vehicle</description>

  <maintainer email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>
  <maintainer email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</maintainer>

  <author email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rexrov2_description</run_depend>
  <run_depend>rexrov2_control</run_depend>

</package>
