<?xml version="1.0"?>
<package format="2">
  <name>rexrov2_gazebo</name>
  <version>0.1.3</version>
  <description>Package with launch files for demonstrations with the RexROV 2 vehicle with different positioning controllers.</description>

  <maintainer email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>
  <maintainer email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</maintainer>

  <author email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rexrov2_description</exec_depend>
  <exec_depend>rexrov2_control</exec_depend>

</package>
